[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmhawk"
version = "1.0.0"
description = "Autonomous AI-powered external attack surface assessment"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  {name = "SwarmHawk AI", email = "founder@swarmhawk.com"}
]
keywords = ["cybersecurity", "penetration-testing", "vulnerability-scanning", "ai", "attack-surface", "nuclei", "recon", "osint"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring",
]

dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60.0"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.0",
  "ruff>=0.1.0",
]

[project.scripts]
swarmhawk = "swarmhawk.cli:main"

[project.urls]
Homepage = "https://swarmhawk.com"
Repository = "https://github.com/hastikdan/swarmhawk-cli"
Issues = "https://github.com/hastikdan/swarmhawk-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["swarmhawk*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
